# project-1-delta-lake

./: 01_tutorial.ipynb  02_dataframe.ipynb  03_parquet.ipynb  04_deltalake.ipynb  05_fantasyfootball.ipynb  LICENSE  README.md  poetry.toml  pyproject.toml  qb_eda.ipynb
assets/: architecture.drawio
data/: 1970.csv  1971.csv  1972.csv  1973.csv  1974.csv  1975.csv  1976.csv  1977.csv  1978.csv  1979.csv  1980.csv  1981.csv  1983.csv  1984.csv  1985.csv  1986.csv  1988.csv  1989.csv  1990.csv  1991.csv  1992.csv  1993.csv  1994.csv  1995.csv  1996.csv  1997.csv  1998.csv  1999.csv  2000.csv  2001.csv  2002.csv  2003.csv  2004.csv  2005.csv  2006.csv  2007.csv  2008.csv  2009.csv  2010.csv  2011.csv  (+12 more)
data/04_output.delta/: .part-00000-c8a984ab-663d-4405-8325-e13fad610af0-c000.snappy.parquet.crc  .part-00001-71a58022-e524-476a-983f-e5f6fefc56f3-c000.snappy.parquet.crc  .part-00002-cf831857-6cd1-4a43-a7e3-ac6393b8aea4-c000.snappy.parquet.crc  .part-00003-995b678a-b995-483c-931d-bec173a51cf7-c000.snappy.parquet.crc  .part-00003-c510ed78-1c84-4e71-9ce7-3b0ef7aeb978-c000.snappy.parquet.crc  .part-00004-50cc4a6f-abea-4fe2-badb-e0141b9525a8-c000.snappy.parquet.crc  .part-00004-9685fa15-3e3e-4a1a-a78f-c0ab0895ed2c-c000.snappy.parquet.crc  .part-00005-16deabee-6813-4caa-b0d5-463342a58727-c000.snappy.parquet.crc  .part-00006-d38fb0f7-c2d8-4c41-84d3-c7ebe5124bae-c000.snappy.parquet.crc  .part-00006-ff473fc7-6fba-462e-9662-9e5b8ef6399d-c000.snappy.parquet.crc  (+42 more)
data/archive/: 1982.csv  (+2 more)
notebooks/: boto3.ipynb  csv_to_delta.ipynb  init_delta_lake.ipynb  qb_eda.ipynb  spark.ipynb
(+15 files in other folders)
