[tool.poetry]
name = "pyspark-tutorial"
version = "0.1.0"
description = "Tutorials for learning pyspark"
authors = ["Madhav Achar <acharmd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.5.0"
jupyterlab = "^4.0.9"
pandas = "^2.1.3"
delta-spark = "^3.0.0"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
